--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+add_compile_definitions(TESTING_AT_HOME)
+
 add_executable(SnakeCharmer ${SOURCES})
